<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_size_m">


    <ImageView
        android:layout_width="@dimen/img_size_m"
        android:layout_height="@dimen/img_size_m"
        android:src="@drawable/ic_launcher_foreground"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_m"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"/>

        <EditText
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fech_nac"/>

        <EditText
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>