<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/film_img"
        android:layout_width="@dimen/img_size_s"
        android:layout_height="@dimen/img_size_xs"
        android:background="@drawable/ic_junglecruise"
        android:layout_marginStart="@dimen/margin_size_m"
        android:layout_marginTop="@dimen/margin_size_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView

            android:id="@+id/start_buttom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_play"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@id/film_img"
        app:layout_constraintTop_toTopOf="@id/film_img"
        android:layout_marginStart="@dimen/margin_size_m"
        android:layout_marginTop="@dimen/margin_size_xs"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/size"/>


    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/size"
        app:layout_constraintTop_toTopOf="@id/size"
        android:text="@string/duration"
        android:layout_marginStart="@dimen/margin_size_s"/>



</androidx.constraintlayout.widget.ConstraintLayout>